# b-parasite

./: .gitignore  CODE_OF_CONDUCT.md  README.md  kitspace.yaml  resources.md
.devcontainer/: devcontainer.json
bridge/: .gitignore  README.md  parahub.yaml
case/: B-paraside-halter_v2.3mf  Bottom.stl  (+7 more)
code/nrf-connect/prstlib/: CMakeLists.txt  Kconfig
code/nrf-connect/prstlib/boards/arm/bparasite_nrf52833/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  bparasite_nrf52833-pinctrl.dtsi  bparasite_nrf52833.dts  bparasite_nrf52833_1_1_0.conf  bparasite_nrf52833_1_2_0.conf  bparasite_nrf52833_1_2_0.overlay  bparasite_nrf52833_2_0_0.conf  bparasite_nrf52833_2_0_0.overlay  bparasite_nrf52833_defconfig  bparasite_nrf52840_2_0_0.conf  revision.cmake
code/nrf-connect/prstlib/boards/arm/bparasite_nrf52840/: Kconfig  Kconfig.defconfig  board.cmake  bparasite_nrf52840.dts  bparasite_nrf52840_1_0_0.conf  bparasite_nrf52840_1_1_0.conf  bparasite_nrf52840_1_1_0.overlay  bparasite_nrf52840_1_2_0.conf  bparasite_nrf52840_2_0_0.conf  bparasite_nrf52840_defconfig
code/nrf-connect/prstlib/boards/bparasite/: Kconfig  Kconfig.bparasite  Kconfig.defconfig  board.cmake  board.yml  bparasite_nrf52833-pinctrl.dtsi  bparasite_nrf52833.dts  bparasite_nrf52833.yaml  bparasite_nrf52833_1_1_0.overlay  bparasite_nrf52833_2_0_0.overlay  bparasite_nrf52840.yaml  bparasite_nrf52840_1_1_0.overlay  bparasite_nrf52840_defconfig
code/nrf-connect/prstlib/dts/bindings/: pwm-fixed.yaml  soil-calibration-coeffs.yaml
code/nrf-connect/prstlib/include/prstlib/: adc.h  button.h  led.h  macros.h  sensors.h
code/nrf-connect/prstlib/src/: adc.c  button.c  led.c  sensors.c  shtc3.c
code/nrf-connect/samples/ble/: CMakeLists.txt  Kconfig  README.md  ble.code-workspace  nrf52840dk_nrf52840.overlay  prj.conf
code/nrf-connect/samples/ble/boards/arm/bparasite_nrf52840/: board.cmake
code/nrf-connect/samples/ble/media/drawings/: ble-bparasite-encoding.excalidraw  ble-bthome-encoding.excalidraw
code/nrf-connect/samples/ble/src/: ble.c  ble.h  encoding.c  encoding.h  main.c
code/nrf-connect/samples/blinky/: .gitignore  CMakeLists.txt
code/nrf-connect/samples/blinky/src/: main.c
code/nrf-connect/samples/input/: CMakeLists.txt  Kconfig  prj.conf
code/nrf-connect/samples/input/src/: main.c
code/nrf-connect/samples/zigbee/: CMakeLists.txt  Kconfig  README.md  b-parasite.js  prj.conf  prj_debug.conf  prj_fota.conf  prj_ota.conf  zigbee.code-workspace
code/nrf-connect/samples/zigbee/include/: zb_range_extender.h
code/nrf-connect/samples/zigbee/src/: attrs.h  debug_counters.c  debug_counters.h  double_reset_detector.c  double_reset_detector.h  factory_reset.c  factory_reset.h  flash_fs.c  flash_fs.h  main.c  prst_zb_attrs.c  prst_zb_attrs.h  prst_zb_endpoint_defs.h  prst_zb_soil_moisture_defs.c  prst_zb_soil_moisture_defs.h  restart_handler.c  restart_handler.h  watchdog.c  watchdog.h  zb_range_extender.h
(+291 files in other folders)
